--- a/Python_notebooks/neodass_ftp_access.ipynb
+++ b/Python_notebooks/neodass_ftp_access.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240523_20240523-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-7d-20240517_20240523-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\cmems_sea_level-sla-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
-      "Downloaded olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc to c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
@@ -128,7 +128,43 @@
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
-      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n"
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\cmems_sea_level-sla-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-7d-20240519_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-7d-20240519_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-7d-20240519_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-7d-20240519_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-7d-20240519_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240525_20240525-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\cmems_sea_level-sla-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-7d-20240520_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-7d-20240520_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-7d-20240520_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-7d-20240520_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-7d-20240520_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240526_20240526-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\cmems_sea_level-sla-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-7d-20240521_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-7d-20240521_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-7d-20240521_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-7d-20240521_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-7d-20240521_20240527-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240527_20240527-nrt.nc already exists. Skipping download.\n"
      ]
     },
     {
@@ -137,7 +173,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
