Improved dictionaries, added tqdm to NEODASS

--- a/Python_notebooks/NEODASS_satellite_visualisation.ipynb
+++ b/Python_notebooks/NEODASS_satellite_visualisation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
     "            file_dict[base_name][file] = {\n",
     "                'variable': key_variable,\n",
     "                'date': datetime.strptime(time_str, \"%Y-%m-%d\")\n",
-    "            }\n",
+    "                }       \n",
     "    else:\n",
     "        print(f\"No suitable key variable found in file: {file}\")\n",
     "\n",
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
     "# Date strings for plotting\n",
     "dates_to_plot = get_dates_between(start_date, end_date)\n",
     "\n",
-    "for var_category, files in var_dict.items():\n",
+    "for var_category, files in tqdm(var_dict.items(), desc = 'Progress Plotting'):\n",
     "    \n",
     "    if skip_chla and var_category == 'chl':\n",
     "        continue\n",
@@ -752,21 +752,21 @@
     "            alphas = np.linspace(1, 0.1, min(num_positions, 9))  # Reverse the opacity gradient\n",
     "\n",
     "        # Plot the positions and lines, with the first 9 points have a decreasing alpha\n",
-    "        for i, (index, row) in enumerate(float_data.iterrows()):\n",
-    "            alpha = alphas[i] if i < 9 else 0.1\n",
-    "            rgba_color_with_alpha = (*rgba_color[:3], alpha)\n",
-    "            marker_edge_color     = (*rgba_color[:3], alpha)  # Marker edge color follows opacity gradient\n",
-    "            ax.scatter(row['LONGITUDE'], row['LATITUDE'], color=rgba_color_with_alpha, edgecolor=marker_edge_color, transform=ccrs.PlateCarree(), zorder=3)\n",
-    "\n",
-    "            if i > 0:\n",
-    "                prev_row = float_data.iloc[i - 1]\n",
-    "                ax.plot([prev_row['LONGITUDE'], row['LONGITUDE']],\n",
-    "                        [prev_row['LATITUDE'], row['LATITUDE']],\n",
-    "                        color=rgba_color_with_alpha, transform=ccrs.PlateCarree(), zorder=2)\n",
-    "                \n",
-    "        # Create a proxy artist for each float\n",
-    "        proxy = plt.Line2D([0], [0], linestyle='-', marker='o', color=float_colors.get(float_name, '#000000'), label=float_name)\n",
-    "        legend_handles.append(proxy)\n",
+    "            for i, (index, row) in enumerate(float_data.iterrows()):\n",
+    "                alpha = alphas[i] if i < 9 else 0.1\n",
+    "                rgba_color_with_alpha = (*rgba_color[:3], alpha)\n",
+    "                marker_edge_color     = (*rgba_color[:3], alpha)  # Marker edge color follows opacity gradient\n",
+    "                ax.scatter(row['LONGITUDE'], row['LATITUDE'], color=rgba_color_with_alpha, edgecolor=marker_edge_color, transform=ccrs.PlateCarree(), zorder=3)\n",
+    "    \n",
+    "                if i > 0:\n",
+    "                    prev_row = float_data.iloc[i - 1]\n",
+    "                    ax.plot([prev_row['LONGITUDE'], row['LONGITUDE']],\n",
+    "                            [prev_row['LATITUDE'], row['LATITUDE']],\n",
+    "                            color=rgba_color_with_alpha, transform=ccrs.PlateCarree(), zorder=2)\n",
+    "                    \n",
+    "                # Create a proxy artist for each float\n",
+    "                proxy = plt.Line2D([0], [0], linestyle='-', marker='o', color=float_colors.get(float_name, '#000000'), label=float_name)\n",
+    "                legend_handles.append(proxy)\n",
     "    \n",
     "        # Deploy point position marker\n",
     "        sc3 = ax.scatter(-24,60,transform=ccrs.PlateCarree(), edgecolors='black', facecolors='none', marker='s')\n",
