Added autonomy from RT positions to satellite visualisation scripts

--- a/Python_notebooks/CMEMS_sat_vis_with_autonomy.ipynb
+++ b/Python_notebooks/CMEMS_sat_vis_with_autonomy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,22 +53,22 @@
     "satellite_dir = os.path.join(data_dir, 'satellite')\n",
     "output_dir    = os.path.join(parent_dir, 'Output/sat_plot')\n",
     "NEODASS_dir   = os.path.join(satellite_dir, 'NEODASS')\n",
-    "floats_dir    = os.path.join(parent_dir, 'Data/Floats')\n"
+    "floats_dir    = os.path.join(parent_dir, 'Data/Floats')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plotting preferences\n",
     "\n",
     "# Global\n",
-    "min_lon = -27 #-35\n",
-    "max_lon = -20 #-5\n",
-    "min_lat = 58.5 #55\n",
-    "max_lat = 63 #66\n",
+    "min_lon = -35 #-35\n",
+    "max_lon = -5 #-5\n",
+    "min_lat = 55 #55\n",
+    "max_lat = 66 #66\n",
     "\n",
     "additional_suffix = 'TEST'\n",
     "\n",
@@ -80,23 +80,22 @@
     "        '1902637':  '#0000E0',\n",
     "        'navis101': '#FBFF1F'}\n",
     "\n",
-    "\n",
     "# CHLA\n",
-    "skip_chla            = True\n",
+    "skip_chla            = False\n",
     "CHLA_color           = 'YlGnBu_r'\n",
     "CHLA_plot_as_log     = True # Default True\n",
     "CHLA_plot_lim_max    = 10   # Default 10\n",
     "CHLA_plot_lim_min    = 0.1  # Default 0.1\n",
     "\n",
     "# SST\n",
-    "skip_sst             = True\n",
+    "skip_sst             = False\n",
     "SST_color            = 'YlOrRd'\n",
     "SST_plot_as_log      = False # Default False\n",
     "SST_plot_lim_max     = 15    # Default 15\n",
     "SST_plot_lim_min     = 5     # Default 5\n",
     "\n",
     "# SSH\n",
-    "skip_sla             = True\n",
+    "skip_sla             = False\n",
     "SSH_color            = 'RdBu'\n",
     "SSH_plot_as_log      = False # Default False\n",
     "SSH_plot_lim_max     = 0.5   # Default  0.5\n",
@@ -117,7 +116,7 @@
     "BBP_plot_lim_min     = 0.0001\n",
     "\n",
     "# PIC\n",
-    "skip_pic             = True\n",
+    "skip_pic             = False\n",
     "PIC_color            = 'YlGnBu_r'\n",
     "PIC_plot_as_log      = True\n",
     "PIC_plot_lim_max     = 0.1\n",
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -310,6 +309,36 @@
      "output_type": "stream",
      "text": [
       "  0%|          | 0/6 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chl\n",
+      "chl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 17%|█▋        | 1/6 [00:57<04:49, 57.82s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sla\n",
+      "sla\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 3/6 [01:34<01:25, 28.50s/it]"
      ]
     },
     {
@@ -324,12 +353,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:52<00:00,  8.68s/it]\n"
+      " 67%|██████▋   | 4/6 [02:25<01:12, 36.35s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dissic\n",
+      "dissic\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6/6 [03:04<00:00, 30.74s/it]\n"
      ]
     }
    ],
    "source": [
     "# Plotting loop\n",
+    "\n",
+    "zoom_plot = False\n",
+    "\n",
+    "csv_file = 'C:\\\\Users\\\\hanshil\\\\Documents\\\\GitHub\\\\biocarbon_nrt_data_viz\\\\Plotting_tools\\\\shared_data\\\\rt_positions.csv'  # Update this path\n",
+    "df = pd.read_csv(csv_file)\n",
     "\n",
     "# 130km circle around deploy point\n",
     "circle_points = generate_circle_points(60, -24, 444)\n",
@@ -339,19 +388,8 @@
     "float_position_path = os.path.join(floats_dir, 'Float_positions_2024_05_25.csv')\n",
     "full_position = pd.read_csv(float_position_path)\n",
     "\n",
-    "# Load the CSV file into a DataFrame\n",
-    "csv_file = 'C:\\\\Users\\\\hanshil\\\\Documents\\\\GitHub\\\\biocarbon_nrt_data_viz\\\\Plotting_tools\\\\shared_data\\\\rt_positions.csv'  # Update this path\n",
-    "df = pd.read_csv(csv_file)\n",
-    "\n",
     "# Convert the 'time' column to datetime\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
-    "\n",
-    "# Define the date_of_plot as a string in the format 'YYYY-MM-DD'\n",
-    "date_of_plot = '2024-05-30'  # Example date\n",
-    "date_of_plot_dt = datetime.strptime(date_of_plot, '%Y-%m-%d')\n",
-    "\n",
-    "# Filter out rows with 'time' greater than date_of_plot\n",
-    "df = df[df['date'] <= date_of_plot_dt]\n",
     "\n",
     "# Define unique symbols for different object types\n",
     "object_symbols = {\n",
@@ -374,10 +412,11 @@
     "    # Add more object names and their colors here\n",
     "}\n",
     "\n",
-    "min_lon = -24.05 #-35\n",
-    "max_lon = -23.85 #-5\n",
-    "min_lat = 59.9 #55\n",
-    "max_lat = 60.1 #66\n",
+    "if zoom_plot:\n",
+    "    min_lon = -24.05 #-35\n",
+    "    max_lon = -23.85 #-5\n",
+    "    min_lat = 59.9 #55\n",
+    "    max_lat = 60.1 #66\n",
     "\n",
     "for var_category, files in tqdm(var_dict.items()):\n",
     "\n",
@@ -477,7 +516,12 @@
     "\n",
     "        print(var_category)\n",
     "        norm = colors.LogNorm(vmin=xx_plot_min, vmax=xx_plot_max) if log_scaling else colors.Normalize(vmin=xx_plot_min, vmax=xx_plot_max)\n",
+    "\n",
     "        NEODASS_data_to_plot_1day = np.clip(combined_data_var_mean, xx_plot_min, xx_plot_max)\n",
+    "\n",
+    "        # If the first dimension of the data is 1, remove it\n",
+    "        if NEODASS_data_to_plot_1day.shape[0] == 1:\n",
+    "            NEODASS_data_to_plot_1day = NEODASS_data_to_plot_1day[0]\n",
     "\n",
     "        if var_category == 'adt':\n",
     "            \n",
@@ -519,15 +563,22 @@
     "        \n",
     "            cbar = plt.colorbar(im, ax=ax, label=xx_plot_cbar_label)\n",
     "\n",
-    "        # Float plotting section\n",
-    "        # Get the unique float names\n",
-    "        unique_floats = full_position['float'].unique()\n",
+    "        # Plotting autonomy\n",
+    "\n",
+    "        date_of_plot_filter = datetime.strptime(date_of_plot, '%Y-%m-%d')\n",
+    "        df_filtered = df[df['date'] <= date_of_plot_filter]\n",
     "\n",
     "        legend_handles = []\n",
     "        # Process each unique object type\n",
     "        for obj_type, symbol in object_symbols.items():\n",
+    "\n",
+    "            if obj_type == 'Float':\n",
+    "                continue\n",
+    "            if obj_type == 'glider':\n",
+    "                continue\n",
+    "\n",
     "            # Filter data for the current object type\n",
-    "            type_data = df[df['platform_type'] == obj_type]\n",
+    "            type_data = df_filtered[df_filtered['platform_type'] == obj_type]\n",
     "            unique_names = type_data['platform_id'].unique()\n",
     "            \n",
     "            for name in unique_names:\n",
@@ -601,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
